tests/compiler/record_type_1.kk
let x : {x: string, y: string} = {
  x = 2,
  y = "hello",
  z = { x = 2 }
}
